update h1 to announce winner on refresh

--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,12 @@
 }
 
 body {
-  background-color: #393E46;
+  background-color: #4d8bf0;
 }
 
 h1 {
   margin: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Helvetica', sans-serif;
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
   color: #4ECCA3;
@@ -25,7 +25,7 @@ h1 {
 p {
   font-size: 2rem;
   color: #4ECCA3;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Helvetica', sans-serif;
 }
 
 img {
@@ -36,6 +36,6 @@ footer {
   margin-top: 5%;
   color: #EEEEEE;
   text-align: center;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Helvetica', sans-serif;
 
 }
