--- a/styles.css
+++ b/styles.css
@@ -16,16 +16,16 @@ body {
 
 h1 {
   margin: 30px;
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Inter', sans-serif;
   text-shadow: 5px 0 #232931;
-  font-size: 8rem;
-  color: #4ECCA3;
+  font-size: 6rem;
+  color: #deebe7;
 }
 
 p {
   font-size: 2rem;
-  color: #4ECCA3;
-  font-family: 'Helvetica', sans-serif;
+  color: #172e27;
+  font-family: 'Inter', sans-serif;
 }
 
 img {
@@ -36,6 +36,6 @@ footer {
   margin-top: 5%;
   color: #EEEEEE;
   text-align: center;
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Inter', sans-serif;
 
 }
